--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: The blog for coolshan008
+title: coolshan008的窝
 subtitle:
-description:
+description: 我才不会什么都发上来呢
 author: coolshan008
 language: zh-CN
 timezone: Asia/Shanghai
