--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: coolshan008的窝
-subtitle:
-description: 我才不会什么都发上来呢
+subtitle: 我才不会什么都发上来呢
+description: The blog for coolshan008
 author: coolshan008
 language: zh-CN
 timezone: Asia/Shanghai
